# 5gnrphysitl

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt  run_experiments.py  run_gui_radioconda.bat  run_gui_radioconda.ps1  run_student_testcases.bat  run_student_testcases.py  run_student_testcases.sh
configs/: default.yaml  scenario_image_transfer.yaml  scenario_sample_file_transfer_sweep.yaml  scenario_su_mimo_two_codeword.yaml  scenario_text_transfer.yaml  scenario_uplink_baseline.yaml
docs/: CHATGPT_SLIDE_PROMPT_PACK_5G_PHY.md  DEVELOPER_GUIDE.md  GUI_ARCHITECTURE.md  INSTALLATION_WORKFLOWS.md  NR_PHY_SIMULATOR_V2_ARCHITECTURE.md  NR_PHY_SIMULATOR_V2_BACKLOG.md  REAL_5G_SYSTEM_VS_PROJECT.md  REAL_5G_SYSTEM_VS_PROJECT.tex  SIMULATION_PARAMETER_REFERENCE.md  STUDENT_TESTCASES.md  TEACHING_DEMO_90_MINUTE.md  TEACHING_LABS_6_SESSION_SERIES.md  TEACHING_LABS_MATRIX.md  TEACHING_QUICKSTART.md  TECHDOC_5G_NR_PHY_TRACE.md  USER_MANUAL.md
experiments/: common.py  csi_loop_compare.py  file_transfer_sweep.py  sample_file_transfer_sweep.py
fivegnr_phy_stl/: __init__.py
gui/: app.py  controls.py  dash_app.py  dashboard.py  gnuradio_windows.py  phy_pipeline.py  plots.py
input/: README.md  sample_message.txt
install/: macos-gnuradio.sh  macos-python-only.sh  ubuntu-gnuradio.sh  ubuntu-python-only.sh  windows-python-only.ps1  windows-radioconda.ps1
phy/: __init__.py  broadcast.py  coding.py  csi.py  frame_structure.py  harq.py  mimo_detection.py  precoding.py  receiver.py  reference_signals.py  resource_grid.py  scheduler.py  transmitter.py  types.py  uplink.py  vrb_mapping.py
tests/: test_broadcast_payload.py  test_coding_pipeline.py  test_csi_feedback.py  test_downlink_control_pipeline.py  test_file_transfer.py  test_file_transfer_sweep.py  test_harq_pipeline.py  test_layer_mapping.py  test_mimo_detection.py  test_multislot_pipeline.py  test_pbch_pipeline.py  test_reference_signal_pipeline.py  test_resource_grid.py  test_sample_file_transfer_sweep.py  test_scheduler_grants.py  test_two_codeword_mimo.py  test_uplink_pipeline.py  test_vrb_mapping.py
utils/: file_transfer.py  (+1 more)
(+4 files in other folders)
